# n8n-workflow-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/n8n_validator/: __init__.py  cli.py  loader.py  reporter.py  validators.py
tests/: test_cli.py  test_loader.py  test_reporter.py  test_validators.py
