[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-workflow-validator"
version = "0.1.0"
description = "A validator for n8n workflow JSON files"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
n8n-validator = "n8n_validator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
